# chemopt

./: pyproject.toml  setup.py
chemopt/: __init__.py  batch_norm.py  config.json  config_1_inputs_standard.json  config_2_inputs_standard.json  config_3_inputs_standard.json  config_4_inputs_bigger.json  config_4_inputs_standard.json  config_5_inputs_bigger.json  config_5_inputs_standard.json  config_6_inputs_bigger.json  config_6_inputs_standard.json  eval.py  gmm.py  gp.py  infer_model.py  lets_start.py  logger.py  model.py  ops.py  pretraining.py  realreaction.py  rnn.py  util.py
chemopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chemopt/save/: -999.data-00000-of-00001  -999.index  1-2999.index  1-5999.data-00000-of-00001  1-5999.index  checkpoint  config.json
chemopt/save/1_inputs_standard/: -23299.data-00000-of-00001  -23299.index  -41399.data-00000-of-00001  -41399.index  -47199.data-00000-of-00001  -47199.index  checkpoint
chemopt/save/2_inputs_standard/: -37699.data-00000-of-00001  -37699.index  -40999.data-00000-of-00001  -40999.index  -42999.data-00000-of-00001  -42999.index  checkpoint
chemopt/save/3_inputs_standard/: -31999.index  -35299.data-00000-of-00001  -35299.index  -46899.index  checkpoint
chemopt/save/3_inputs_standard_v1/: -41099.data-00000-of-00001  -41099.index  -44899.data-00000-of-00001  -44899.index  -48699.data-00000-of-00001  -48699.index
code/: __init__.py  gp.py  reactions.py  realreaction.py
code/save/: 1-2999.data-00000-of-00001  1-3999.data-00000-of-00001  1-3999.index  config.json
tests/: test_chemopt.py
(+52 files in other folders)
