[tool.poetry]
name = "chemopt"
version = "0.1.0"
description = ""
authors = ["jangerit <jan.rittig@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "1.13.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
